--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -42,7 +42,7 @@ story_location: _bmad-output/implementation-artifacts
 development_status:
   # Epic 1: Fondation Projet & Infrastructure
   epic-1: in-progress
-  1-1-initialisation-projet-nextjs-supabase: in-progress
+  1-1-initialisation-projet-nextjs-supabase: done
   1-2-schema-db-fondation-auth-duale: backlog
   1-3-rls-policies-isolation-donnees: backlog
   epic-1-retrospective: optional
