--- a/digirepair/package.json
+++ b/digirepair/package.json
@@ -35,7 +35,7 @@
     "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^15.3.1",
     "jsdom": "^28.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
