--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -43,7 +43,7 @@ development_status:
   # Epic 1: Fondation Projet & Infrastructure
   epic-1: in-progress
   1-1-initialisation-projet-nextjs-supabase: done
-  1-2-schema-db-fondation-auth-duale: backlog
+  1-2-schema-db-fondation-auth-duale: done
   1-3-rls-policies-isolation-donnees: backlog
   epic-1-retrospective: optional
 
