--- a/digirepair/package.json
+++ b/digirepair/package.json
@@ -5,12 +5,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "gen:types": "supabase gen types typescript --linked > types/database.types.ts",
+    "gen:types": "npx supabase gen types typescript --linked > types/database.types.ts",
     "test": "vitest",
     "test:run": "vitest run",
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
@@ -24,7 +25,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
