--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -41,15 +41,15 @@ story_location: _bmad-output/implementation-artifacts
 
 development_status:
   # Epic 1: Fondation Projet & Infrastructure
-  epic-1: in-progress
+  epic-1: done
   1-1-initialisation-projet-nextjs-supabase: done
   1-2-schema-db-fondation-auth-duale: done
-  1-3-rls-policies-isolation-donnees: backlog
+  1-3-rls-policies-isolation-donnees: done
   epic-1-retrospective: optional
 
   # Epic 2: Vitrine Publique & SEO
-  epic-2: backlog
-  2-1-homepage-layout-public: backlog
+  epic-2: in-progress
+  2-1-homepage-layout-public: in-progress
   2-2-pages-seo-couche-1-categorie-ville: backlog
   2-3-pages-seo-couche-2-marque-piece-modele-ville: backlog
   2-4-blog-faq: backlog
