chore: update seo artifacts and helpers

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -51,8 +51,8 @@ development_status:
   epic-2: in-progress
   2-1-homepage-layout-public: done
   2-2-pages-seo-couche-1-categorie-ville: done
-  2-3-pages-seo-couche-2-marque-piece-modele-ville: in-progress
-  2-4-blog-faq: backlog
+  2-3-pages-seo-couche-2-marque-piece-modele-ville: done
+  2-4-blog-faq: ready-for-dev
   2-5-page-a-propos-mentions-legales: backlog
   2-6-scene-3d-vitrine: backlog
   epic-2-retrospective: optional
